--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-body{
-    max-width: 60%;
-}
 header{
     background-image: url(img/pattern.png);
     background-color: cornflowerblue;
@@ -11,4 +8,17 @@ header{
     height: 50px;
     width: auto;
     margin-top: 70px;
+}
+.firma{
+    color: grey;
+}
+
+#X{
+    color: lightskyblue;
+}
+.Comment{
+    font-size: 10px;
+}
+.Yellow{
+    background-color: yellow;
 }
