--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    max-width: 1100px;
+    max-height: 2000px;
+}
 header{
     background-image: url(img/pattern.png);
     background-color: cornflowerblue;
@@ -18,7 +22,61 @@ header{
 }
 .Comment{
     font-size: 10px;
+    margin-top: 0px;
+    padding: 0px;
 }
 .Yellow{
     background-color: yellow;
+}
+
+ul{
+    padding-left: 20px;
+}
+
+Table{
+    border-collapse: collapse;
+}
+thead{
+    background-color: turquoise;
+    color: white;
+    text-align: left;
+}
+.row{
+    background-color: aquamarine;
+}
+
+.left{
+    width: 30% ;
+}
+.central{
+    width: 30%;
+}
+.right{
+    width: 40%;
+}
+
+.picture{
+    display: block;
+}
+#computer{    
+    background-image: url(img/monitor.jpg);
+    background-repeat: no-repeat;
+    color: #FFFFFF;
+    font-size: 140%;
+    font-weight: normal;
+    line-height: 260px;
+    padding-top: 5px;
+    width: 240px;
+    height: 150px;
+}
+#schermo{
+    background-image: url(img/graph.jpg);
+    background-repeat: no-repeat;
+    color: #FFFFFF;
+    font-size: 140%;
+    font-weight: normal;
+    line-height: 260px;
+    margin-bottom: 50px;
+    width: 240px;
+    height: 150px;
 }
