--- a/style.css
+++ b/style.css
@@ -37,12 +37,12 @@ Table{
     border-collapse: collapse;
 }
 thead{
-    background-color: turquoise;
+    background-color: rgb(2, 162, 236);
     color: white;
     text-align: left;
 }
 .row{
-    background-color: aquamarine;
+    background-color: rgb(118, 255, 255);
 }
 
 .left{
@@ -61,11 +61,8 @@ thead{
 #computer{    
     background-image: url(img/monitor.jpg);
     background-repeat: no-repeat;
-    color: #FFFFFF;
-    font-size: 140%;
-    font-weight: normal;
-    line-height: 260px;
-    padding-top: 5px;
+    color: #FFFFFF;  
+    margin-bottom: 50px;
     width: 240px;
     height: 150px;
 }
@@ -73,9 +70,6 @@ thead{
     background-image: url(img/graph.jpg);
     background-repeat: no-repeat;
     color: #FFFFFF;
-    font-size: 140%;
-    font-weight: normal;
-    line-height: 260px;
     margin-bottom: 50px;
     width: 240px;
     height: 150px;
