--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
 body{
     max-width: 1100px;
     max-height: 2000px;
+    font-weight: bolder;
+   
 }
 header{
     background-image: url(img/pattern.png);
     background-color: rgba(78,160,255,255);
     height: 130px;
     
+}
+
+h1{
+    font-size: 40px;
 }
 #logo{
     height: 50px;
@@ -15,10 +21,11 @@ header{
 }
 .firma{
     color: grey;
+    padding-top: 10;
 }
 
 #X{
-    color: lightskyblue;
+    color:  rgba(78,160,255,255);
 }
 .Comment{
     font-size: 10px;
